# menumingles

./: README.md
.github/workflows/: MenuMinglesBackend.yml  (+4 more)
backend/: Dockerfile  backend.csproj  backend.http
docs/: diagrams.drawio  documentation.docx  ~$cumentation.docx
menu-backend/: .gitignore  InfrastructureMiddlewares.cs  InfrastructureRegistrations.cs  Program.cs  appsettings.Development.json  appsettings.json  backend.csproj  backend.http  backend.sln
menu-frontend/: index.html  package.json  pnpm-lock.yaml
menu-minglers/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.ini  docker-compose.yml  pyproject.toml  pytest.ini
menu-minglers/app/: config.py  main.py
menu-minglers/app/api/v1/: router.py
menu-minglers/app/api/v1/endpoints/: discussion.py  health.py  people.py  websocket.py
menu-minglers/app/core/: exceptions.py  logging.py
menu-minglers/app/managers/: discussion_manager.py  discussion_websocket_logger.py  health_manager.py  people_manager.py  websocket_server.py
menu-minglers/app/models/: chat_message_model.py  discussion.py  health.py  people.py
menu-minglers/app/services/: health_service.py  websocket_service.py
menu-minglers/data/: chef_fritz_baumann.json  coach_susi_kraeftig.json  discussion_request.json  person_aisha_khan.json  person_christoph_meier.json  person_lea_huber.json  person_mateo_alvarez.json  person_tobias_mueller.json
menu-minglers/examples/: simple_websocket_example.py  websocket_usage_example.py
menu-minglers/tests/: test_health.py  test_people.py  test_websocket.py  test_websocket_service.py  test_websocket_simple.py
menu-recommender/: .gitignore  Dockerfile  app_factory.py  main.py  pyproject.toml
menu-recommender/controllers/: menu_recommender_controller.py
menu-recommender/dataset/: ingredient2idx.pkl
menu-recommender/embeddings/: recipe_embeddings.pt
menu-recommender/models/: recipie_embedding_model.py
menu-recommender/notebooks/: clean_dataset.ipynb  food_recommender.ipynb
menu-recommender/services/: image_service.py  recommender_service.py
web-chat/: Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml
(+101 files in other folders)
