[tool.poetry]
name = "menu-recommender"
version = "0.1.0"
description = "Menu recommender service"
authors = ["Oliver Hofmann"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic-settings = "^2.10.1"
pandas = "^2.3.2"
notebook = "^7.4.5"
torch = "^2.8.0"
joblib = "^1.5.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
